high contrast fix in Performance tools panel

--- a/front_end/data_grid/dataGrid.css
+++ b/front_end/data_grid/dataGrid.css
@@ -271,3 +271,34 @@
     width: 5px;
     z-index: 500;
 }
+
+@media (forced-colors: active) {
+    .sort-order-icon-container [is=ui-icon].icon-mask {
+        background-color: ButtonText;
+    }
+    .data-grid th.sortable:hover .sort-order-icon-container [is=ui-icon].icon-mask {
+        background-color: HighlightText;
+    }
+    .data-grid:focus table.data tr.selected {
+        forced-color-adjust: none;
+        background-color: Highlight !important;
+        color: HighlightText;
+    }
+    .data-grid th.sortable:hover {
+        forced-color-adjust: none;
+        background-color: Highlight;
+    }
+    .data-grid th.sortable:hover * {
+        color: HighlightText;
+    }
+    .data-grid.no-selection[data-keyboard-focus="true"]:focus {
+        forced-color-adjust: none;
+        border-color: Highlight !important;
+    }
+    .striped-data-grid .revealed.data-grid-data-grid-node:nth-child(odd),
+    .striped-data-grid-starts-with-odd .revealed.data-grid-data-grid-node:nth-child(even),
+    .request-cookies-view tr.revealed.data-grid-data-grid-node.flagged-cookie-attribute-row:not(.selected):nth-child(2n),
+    .cookies-table tr.revealed.data-grid-data-grid-node.flagged-cookie-attribute-row:not(.selected):nth-child(odd) {
+        background: Canvas;
+    }
+}
